# SCRMatrix_SSD

./: CMakeLists.txt  README.md  main.cpp
include/SCRMatrix_SSD/: all.h  matrix_status.h  openCloseOperations.h  readOperations.h  writeOperations.h
mains/: matrixMultiplication.cpp  preliminary.cpp
src/: matrix_status.cpp  openCloseOperations.cpp  readOperations.cpp  writeOperations.cpp
